:sparkles: Added onClick move to a clicked step function

--- a/src/components/GuidedSetup/guidedSetup.module.scss
+++ b/src/components/GuidedSetup/guidedSetup.module.scss
@@ -23,6 +23,7 @@ $color-grey: #282c34;
         color: lighten($color-grey, 50%);
         vertical-align: middle;
         margin: 0 5px;
+        cursor: pointer;
     }
 }
 
